[package]
name = "raylib"
version = "0.1.0"
authors = ["David Cristofaro <david@dtcristo.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtcristo/raylib-rust"
description = "Bindings for raylib, a simple and easy-to-use library to learn videogames programming"
categories = ["game-engines", "api-bindings"]

[dependencies]
raylib-sys = { path = "../raylib-sys" }
