[package]
name = "raylib"
version = "0.1.0"
authors = ["David Cristofaro <david@dtcristo.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtcristo/raylib-rust"
description = "Bindings for raylib, a simple and easy-to-use library to learn videogames programming"
categories = ["game-engines", "api-bindings"]
edition = "2018"

[dependencies]
enumflags = "0.4.1"
enumflags_derive = "0.4.1"
num-traits = "0.2"
num-derive = "0.2"
raylib-sys = { path = "../raylib-sys" }
